# AI-in-Warehouse

./: LICENSE  README.md  expenses.json  main.py  new.db  pyproject.toml
