[project]
name = "fastapi-expense-tracker"
version = "0.1.0"
description = "Simple FastAPI expense tracker using JSON file storage (no database)"
authors = [
    { name="Swethasri P" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
